--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
   <body>
     <h1>World Clock</h1>
     <footer>
-      This project was coded by Mahadi Sebaya and is open-sourced on GitHub and
-      is hosted on Netlify.
+      This project was coded by
+      <a href="https://github.com/ManakaM265" target="_blank">Mahadi Sebaya</a>
+      and is
+      <a
+        href="https://github.com/ManakaM265/World-Clock-Project"
+        target="_blank"
+        >open-sourced on GitHub</a
+      >
+      and is
+      <a href="https://everycityclock.netlify.app/" target="_blank"
+        >hosted on Netlify.</a
+      >
     </footer>
     <script src="src/index.js"></script>
   </body>
