Added a dropdown with city options

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <h1>World Clock</h1>
+    <select name="cities" id="cities">
+      <option value="">Select a city</option>
+      <option value="">Johannesburg 🇿🇦</option>
+      <option value="">New York 🇺🇸</option>
+      <option value="">Lagos 🇳🇬</option>
+    </select>
     <footer>
       This project was coded by
       <a href="https://github.com/ManakaM265" target="_blank">Mahadi Sebaya</a>
