Added placeholder copy of different city times

--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
       <option value="">New York 🇺🇸</option>
       <option value="">Lagos 🇳🇬</option>
     </select>
+
+    <div class="city">
+      <h2>Nairobi 🇰🇪</h2>
+      <div class="date">May 15th 2025</div>
+      <div class="time">1:48:15 AM</div>
+    </div>
+    <div class="city">
+      <h2>London 🇬🇧</h2>
+      <div class="date">May 15th 2025</div>
+      <div class="time">1:48:15 AM</div>
+    </div>
     <footer>
       This project was coded by
       <a href="https://github.com/ManakaM265" target="_blank">Mahadi Sebaya</a>
