Placed basic layout in a container

--- a/index.html
+++ b/index.html
@@ -7,23 +7,25 @@
     <title>World Clock</title>
   </head>
   <body>
-    <h1>World Clock</h1>
-    <select name="cities" id="cities">
-      <option value="">Select a city</option>
-      <option value="">Johannesburg 🇿🇦</option>
-      <option value="">New York 🇺🇸</option>
-      <option value="">Lagos 🇳🇬</option>
-    </select>
+    <div class="container">
+      <h1>World Clock</h1>
+      <select name="cities" id="cities">
+        <option value="">Select a city</option>
+        <option value="">Johannesburg 🇿🇦</option>
+        <option value="">New York 🇺🇸</option>
+        <option value="">Lagos 🇳🇬</option>
+      </select>
 
-    <div class="city">
-      <h2>Nairobi 🇰🇪</h2>
-      <div class="date">May 15th 2025</div>
-      <div class="time">1:48:15 AM</div>
-    </div>
-    <div class="city">
-      <h2>London 🇬🇧</h2>
-      <div class="date">May 15th 2025</div>
-      <div class="time">1:48:15 AM</div>
+      <div class="city">
+        <h2>Nairobi 🇰🇪</h2>
+        <div class="date">May 15th 2025</div>
+        <div class="time">1:48:15 AM</div>
+      </div>
+      <div class="city">
+        <h2>London 🇬🇧</h2>
+        <div class="date">May 15th 2025</div>
+        <div class="time">1:48:15 AM</div>
+      </div>
     </div>
     <footer>
       This project was coded by
