--- a/index.html
+++ b/index.html
@@ -23,14 +23,18 @@
       </select>
 
       <div class="city">
-        <h2>Nairobi 🇰🇪</h2>
-        <div class="date">May 15th 2025</div>
-        <div class="time">1:48:15 AM</div>
+        <div>
+          <h2>Nairobi 🇰🇪</h2>
+          <div class="date">May 15th 2025</div>
+        </div>
+        <div class="time">1:48:15 <small>AM</small></div>
       </div>
       <div class="city">
-        <h2>London 🇬🇧</h2>
-        <div class="date">May 15th 2025</div>
-        <div class="time">1:48:15 AM</div>
+        <div>
+          <h2>London 🇬🇧</h2>
+          <div class="date">May 15th 2025</div>
+        </div>
+        <div class="time">1:48:15 <small>AM</small></div>
       </div>
     </div>
     <footer>
