Replaced placeholder date with real-time data

--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
         <option value="">Lagos 🇳🇬</option>
       </select>
 
-      <div class="city">
+      <div class="city" id="nairobi">
         <div>
           <h2>Nairobi 🇰🇪</h2>
           <div class="date">May 15th 2025</div>
         </div>
         <div class="time">1:48:15 <small>AM</small></div>
       </div>
-      <div class="city">
+      <div class="city" id="london">
         <div>
           <h2>London 🇬🇧</h2>
-          <div class="date">May 15th 2025</div>
+          <div class="date">May 15th 2022</div>
         </div>
         <div class="time">1:48:15 <small>AM</small></div>
       </div>
