Added functionality for the select dropdown
1. Added timezones for each city in the dropdown
2. When a user selects a city, a new city name is created using the timezone by splitting the timezone name in two & getting the second value only & replace any underscores in the second value with a space
3. The default cities data is replaced with real-time data of the city selected by the user (city name, current date, current time)

--- a/index.html
+++ b/index.html
@@ -17,28 +17,31 @@
   <body>
     <div class="container">
       <h1>World Clock</h1>
-      <select name="cities" id="cities">
+      <select name="city" id="city">
         <option value="">Select a city</option>
-        <option value="">Johannesburg 🇿🇦</option>
-        <option value="">New York 🇺🇸</option>
-        <option value="">Lagos 🇳🇬</option>
+        <option value="Africa/Johannesburg">Johannesburg 🇿🇦</option>
+        <option value="America/New_York">New York 🇺🇸</option>
+        <option value="Africa/Lagos">Lagos 🇳🇬</option>
       </select>
 
-      <div class="city" id="nairobi">
-        <div>
-          <h2>Nairobi 🇰🇪</h2>
-          <div class="date">May 15th 2025</div>
+      <div id="cities">
+        <div class="city" id="nairobi">
+          <div>
+            <h2>Nairobi 🇰🇪</h2>
+            <div class="date">May 15th 2025</div>
+          </div>
+          <div class="time">1:48:15 <small>AM</small></div>
         </div>
-        <div class="time">1:48:15 <small>AM</small></div>
-      </div>
-      <div class="city" id="london">
-        <div>
-          <h2>London 🇬🇧</h2>
-          <div class="date">May 15th 2022</div>
+        <div class="city" id="london">
+          <div>
+            <h2>London 🇬🇧</h2>
+            <div class="date">May 15th 2022</div>
+          </div>
+          <div class="time">1:48:15 <small>AM</small></div>
         </div>
-        <div class="time">1:48:15 <small>AM</small></div>
       </div>
     </div>
+
     <footer>
       This project was coded by
       <a href="https://github.com/ManakaM265" target="_blank">Mahadi Sebaya</a>
