--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
           </div>
           <div class="time">1:48:15 <small>AM</small></div>
         </div>
+        <div class="city" id="dubai">
+          <div>
+            <h2>Dubai 🇦🇪</h2>
+            <div class="date">May 15th 2025</div>
+          </div>
+          <div class="time">1:48:15 <small>AM</small></div>
+        </div>
       </div>
     </div>
 
